--- a/CanaryIslandApp/src/main/AndroidManifest.xml
+++ b/CanaryIslandApp/src/main/AndroidManifest.xml
@@ -9,8 +9,9 @@
         android:name=".app.MediatorApp"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
-            android:name=".canaryisland.CanaryIslandView"
+            android:name=".home.HomeView"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -19,7 +20,11 @@
             </intent-filter>
         </activity>
 
-
+        <activity
+            android:name=".canaryisland.CanaryIslandView"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
 
     </application>
 
