Cleaned code. Fixed Crazy problems. Fixed Category. Conected IslandMenu to Category.

--- a/CanaryIslandApp/src/main/AndroidManifest.xml
+++ b/CanaryIslandApp/src/main/AndroidManifest.xml
@@ -32,6 +32,24 @@
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
 
+        <activity
+            android:name=".category.CategoryView"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+
+        <activity
+            android:name=".locations.LocationsView"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+
+        <activity
+            android:name=".description.DescriptionView"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+
     </application>
 
 </manifest>
