Modify connection with googleMaps, no connection.

--- a/CanaryIslandApp/src/main/AndroidManifest.xml
+++ b/CanaryIslandApp/src/main/AndroidManifest.xml
@@ -48,7 +48,11 @@
             android:name=".description.DescriptionView"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="com.google.android.geo.API_KEY"
+                android:value="AIzaSyBBTPo6vlrzHKRh1oRkFN8HYCH5ebgnR9w"/>
         </activity>
+
 
     </application>
 
