--- a/CanaryIslandApp/src/main/AndroidManifest.xml
+++ b/CanaryIslandApp/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
 
         <activity
             android:name=".category.CategoryView"
-            android:label="@string/app_name"
+            android:label="Category"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
 
