--- a/CanaryIslandApp/build.gradle
+++ b/CanaryIslandApp/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.application'
+apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '26.0.2'
+    buildToolsVersion '27.0.3'
     defaultConfig {
-        //applicationId "es.ulpgc.eite.clean.mvp.dummy"
-        applicationId "es.ulpgc.eite.clean.mvp.hello"
+        applicationId "es.ulpgc.eite.clean.mvp.sample.CanaryIsland"
         minSdkVersion 19
         targetSdkVersion 25
         versionCode 1
@@ -25,8 +25,13 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.4.0'
-    compile 'com.android.support:design:25.4.0'
+    compile 'com.android.support:appcompat-v7:25.0.1'
+    compile 'com.android.support:support-v4:25.0.1'
+    compile 'com.android.support:design:25.0.1'
+    compile 'com.android.support:recyclerview-v7:25.0.1'
     testCompile 'junit:junit:4.12'
     compile project(':CleanMvpLib')
 }
+
+
+
