--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,9 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.1'
+        classpath 'com.android.tools.build:gradle:3.1.2'
+        //classpath "io.realm:realm-gradle-plugin:2.2.0"
+        classpath "io.realm:realm-gradle-plugin:4.2.0"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -16,7 +18,6 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-        google()
     }
 }
 
