--- a/CanaryIslandApp/src/main/AndroidManifest.xml
+++ b/CanaryIslandApp/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:name=".app.MediatorApp"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:largeHeap="true">
 
         <activity
             android:name=".home.HomeView"
